--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <h2>Other</h2>
 <hr>
 <ul><li>Languages: English (fluent), hebrew (fluent)</li></ul>
-<ul><li><a href="https://hobbies.com">My Hobbies</a></li></ul>
-<ul><li><a href="https://contactme.com">Contact Me</a></li></ul>
+<ul><li><a href="https://yairazrieli.github.io/web-HW1/hobbies">My Hobbies</a></li></ul>
+<ul><li><a href="https://yairazrieli.github.io/web-HW1/contactme">Contact Me</a></li></ul>
 <footer>© Yair Azrieli. All rights reserved.</footer>
 </body>
 </html>
